:bug: Fix selected text not being visible

--- a/frontend/resources/styles/common/refactor/design-tokens.scss
+++ b/frontend/resources/styles/common/refactor/design-tokens.scss
@@ -357,6 +357,10 @@
   --viewer-thumbnails-control-foreground-color: var(--color-foreground-secondary);
   --viewer-thumbnail-border-color: var(--color-accent-primary);
   --viewer-thumbnail-background-color-selected: var(--color-accent-primary-muted);
+
+  // TEXT SELECTION
+  --text-editor-selection-background-color: var(--da-tertiary-70);
+  --text-editor-selection-foreground-color: var(--app-white);
 }
 
 #app {
@@ -383,4 +387,6 @@
 
   --assets-item-name-background-color: var(--color-background-primary);
   --assets-item-name-foreground-color: var(--color-foreground-primary);
+
+  --text-editor-selection-background-color: var(--la-tertiary-70);
 }
